# ccs2026-rootguard-artifact

./: .env.example  .gitignore  AUDIT.md  INSTALL.md  README.md  pyproject.toml  requirements.txt
PAPER/: main.tex  references.bib
PAPER/figures/: preempt_overview.tex  preempt_overview_2.tex  rq4_aggregate_wmape.tex
PAPER/sections/: 1_Introduction.tex  2_Background.tex  3_Method.tex  4_PrivacyAnalysis.tex  5_experiments_worst_case_adversary.tex  6_RelatedWork.tex  7_Conclusion.tex  Appendix.tex
PAPER/slides/: slides.tex
baselines/: bounded_laplace_baseline.py  cape_baseline.py  cape_roberta_baseline.py  clusant_baseline.py  custext_baseline.py  dp_gtr_baseline.py  inferdpt_baseline.py  rr_baseline.py  santext_baseline.py  sbyw_dpmlm_baseline.py  ss_baseline.py  staircase_baseline.py  text_dp_common.py
baselines/DP-GTR/: .gitignore  CustomDataset.py  GTR.py  README.md  openai_generation.py  test.ipynb  utils.py
baselines/DPMLM/: DPMLM.py
baselines/InferDPT/: README.md
baselines/PAPILLON/: .gitignore  README.md  environment.yml  papillon_tutorial.ipynb
data/: holdout_population_means.json  nhanes_benchmark_200.json
preempt/: ner.py  sanitizer.py  utils.py
rootguard/: common.py  conversation.py  names_dataset.json
rq1_target_utility/: README.md  recompute_wmape.py  run_root_space.py  run_target_space.py
rq1_target_utility/analysis/: gen_appendix_summary.py  gen_double_asymmetry_table.py  gen_main_tables.py  gen_plots.py  gen_plots_root_based.py  gen_rce_tables.py
rq2_reconstruction/: README.md  SUMMARY.md  precompute_allocations.py  run.py
rq2_reconstruction/analysis/: gen_appendix.py  gen_main_figure.py  gen_main_table.py  gen_paper_tables.py  gen_per_epsilon_plots.py  gen_per_template_plots.py  loader.py
rq2_reconstruction/tables/: appendix.tex  main_table_informed.tex  main_table_uniform.tex  recon_main.tex  rq2_blap_agg.tex  rq2_exp_A_informed.tex  rq2_exp_A_uniform.tex  rq2_exp_B_informed.tex  rq2_exp_B_uniform.tex  rq2_per_template.tex  rq2_stair_agg.tex
rq3_structural_analysis/: README.md
rq3_structural_analysis/analysis/: gen_allocation_plot.py  gen_allocation_plot_2kplus1.py  gen_fair_utility.py  gen_per_template_plot.py  gen_per_template_summary.py  gen_template_metadata_table.py
rq3_structural_analysis/tables/: latex_template_metadata.tex  per_template_summary.tex
rq4_agent_eval/: README.md  SUMMARY.md  aggregates.json  precompute_allocations.py
rq4_agent_eval/agent/: prompts.py  proxy.py  runner.py  tools.py
utils/: risk_class.py  sanitize_v7_partial_graph.py  utils.py
(+70 files in other folders)
