[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "preempt"
version = "0.1.27"
description = "Sanitize prompts containing PII values, while mainting high utility with cryptographic privacy guarantees"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "names>=0.3.0",
    "names-dataset>=3.3.1",
    "protobuf>=5.29.4",
    "pyfpe>=0.10.3",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]
